--- a/Generate-Agreement-App/.env
+++ b/Generate-Agreement-App/.env
@@ -2,5 +2,5 @@ DB_URL=jdbc:mysql://localhost:3306/agri-connect?createDatabaseIfNotExist=true
 DB_USERNAME=root
 DB_PASSWORD=Vandit@2512
 PORT=2529
-#MAIL_USERNAME=vanditkaj266@gmail.com
-#MAIL_PASS=lbhe fsjw cbqy xibp
+MAIL_USERNAME=vanditkaj266@gmail.com
+MAIL_PASS=lbhe fsjw cbqy xibp
