Improved Contract generation

--- a/Generate-Agreement-App/.env
+++ b/Generate-Agreement-App/.env
@@ -4,3 +4,5 @@ DB_PASSWORD=Vandit@2512
 PORT=2529
 MAIL_USERNAME=vanditkaj266@gmail.com
 MAIL_PASS=lbhe fsjw cbqy xibp
+#GOOGLE_MAP_API_KEY=AIzaSyCLsPAguFV4as5lTw4OVYlJzn_6FBHc6HU
+GOOGLE_MAP_API_KEY=AIzaSyBipDUAGdtYGXbH5NyqYLnvI9TopPmfP1M
