--- a/Contract-Farming-App/pom.xml
+++ b/Contract-Farming-App/pom.xml
@@ -29,7 +29,9 @@
 	<properties>
 		<java.version>23</java.version>
 		<spring-cloud.version>2024.0.0</spring-cloud.version>
-	</properties>
+        <maven.compiler.source>23</maven.compiler.source>
+        <maven.compiler.target>23</maven.compiler.target>
+    </properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -78,7 +80,7 @@
 		<dependency>
 			<groupId>org.web3j</groupId>
 			<artifactId>core</artifactId>
-			<version>4.9.8</version>
+			<version>4.10.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
